<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_nsfw_key"
        android:summary="@string/pref_nsfw_summary"
        android:title="@string/pref_nsfw_title" />

    <PreferenceCategory
        android:title="About">
        <PreferenceScreen
            android:title="@string/pref_dev_title"
            android:key="@string/pref_dev_key"
            android:summary="@string/pref_dev_summary">
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_buildnum_title"
            android:key="@string/pref_buildnum_key"
            android:summary="@string/pref_buildnum_summary">
        </PreferenceScreen>
    </PreferenceCategory>


</PreferenceScreen>
